--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ streamlit
 streamlit-chat
 PyPDF2
 langchain
-langchain_community
-langchain_google_genai
+langchain-community
 faiss-cpu
 sentence-transformers
